--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-image-magnify": "^2.7.4",
     "react-modal": "^3.16.1",
     "sass": "^1.71.1",
     "tailwindcss": "^3.4.1"
