--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-icons": "^5.0.1",
     "react-image-magnify": "^2.7.4",
     "react-modal": "^3.16.1",
+    "react-slick": "^0.30.2",
     "sass": "^1.71.1",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
